# wb_parser

./: .gitignore  .pre-commit-config.yaml  index.html  pyproject.toml
wildberries_parser/: scrapy.cfg
wildberries_parser/wildberries_parser/: contracts.py  items.py  middlewares.py  pipelines.py  settings.py
wildberries_parser/wildberries_parser/spiders/wildberries_seller/: parser.py  spider.py
wildberries_parser/wildberries_parser/spiders/wildberries_seller/tests/: result_1.json  result_2.json
