[tool.poetry]
name = "wildberries-parser"
version = "0.1.0"
description = ""
authors = ["paveL1boyko <pave1.boyk0ok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.0"
scrapy-splash = "^0.9.0"
selenium = "^4.15.2"


[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.0"
ruff = "^0.1.5"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
mypy_path = "src/"
strict = true

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
select = [
    "C4", # flake8-comprehensions
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "W", # pycodestyle warnings
    "UP", # pyupgrade
]

ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
]

unfixable = ["B"]

fix = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]
